Fixed bug where paginator was not showing up

--- a/scss/_groups.scss
+++ b/scss/_groups.scss
@@ -574,7 +574,7 @@
         margin-right: 1em;
         
 
-        &.members__pagination-link--active {
+        &.groups__pagination-link--active {
             position: relative;
             &:after {
                 position: absolute;
